# ClusterCompress-backend

./: .gitignore  pyproject.toml  requirements.txt
app/: main.py  models.py
app/services/: analysis_service.py  image_processing_service.py
app/utils/: image_utils.py
